--- a/charsheet.html
+++ b/charsheet.html
@@ -43,6 +43,7 @@
           <tr>
             <td>Carisma</td>
             <td><input type="number" value="15" id="carPonto"></td>
+            <td><button>comprar</button></td>
           </tr>
         </table>
 
